NSM: bypass JACK sigaction race via bash wrapper + SIGUSR2
The root cause: libjack reinstalls its SIGTERM sigaction immediately when
FluidSynth connects to JACK — which can happen almost simultaneously with
session close, leaving no window for the 100ms watchdog to reclaim it.

Fix: announce the launcher script's PID (NSM_LAUNCHER_PID=$$) to the NSM
server instead of the JVM PID.  The session manager sends SIGTERM to the
bash wrapper; the wrapper's trap converts it to SIGUSR2 and forwards it to
the Java child.  Java handles SIGUSR2 via sun.misc.Signal (JACK never
installs a SIGUSR2 handler), so it fires reliably every time.

Changes:
- tuxguitar.sh: export NSM_LAUNCHER_PID, run Java in background, trap SIGTERM
- NSMClient.sendAnnounce(): use NSM_LAUNCHER_PID when set
- NSMClient.registerSigusr2Handler(): sun.misc.Signal USR2 → handleQuit()

The JNI sigaction watchdog is kept as a fallback for kill -TERM sent directly
to the JVM process (e.g. manual testing).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>